--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Chat Microservices to AWS EC2
+name: Deploy to AWS Elastic Beanstalk
 
 on:
   push:
@@ -6,7 +6,22 @@ on:
       - main
 
 jobs:
-  setup:
+  build-and-push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+      - name: Build and Push Docker Image
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/chat-microservices:latest .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/chat-microservices:latest
+
+  deploy:
+    needs: build-and-push
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -19,45 +34,15 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-  build-and-push:
-    needs: setup
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
-      - name: Build and Push Docker Images
+      - name: Deploy to Elastic Beanstalk
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/sendmessage:latest ./sendmessage
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/getmessages:latest ./getmessages
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/deletemessage:latest ./deletemessage
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/sendmessage:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/getmessages:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/deletemessage:latest
+          zip -r deploy.zip Dockerrun.aws.json
+          aws elasticbeanstalk create-application-version \
+            --application-name ${{ secrets.AWS_EB_APPLICATION }} \
+            --version-label "deploy-${{ github.run_number }}" \
+            --source-bundle S3Bucket="elasticbeanstalk-${{ secrets.AWS_REGION }}-$(aws sts get-caller-identity --query Account --output text)",S3Key="deploy.zip"
 
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v0.1.4
-        with:
-          host: ${{ secrets.AWS_EC2_INSTANCE }}
-          username: ec2-user
-          key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-          script: |
-            sudo yum update -y
-            sudo yum install -y docker
-            sudo service docker start
-            sudo usermod -aG docker ec2-user
-            newgrp docker
-            curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-            chmod +x /usr/local/bin/docker-compose
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/sendmessage:latest
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/getmessages:latest
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/deletemessage:latest
-            docker-compose down
-            docker-compose up -d
+          aws elasticbeanstalk update-environment \
+            --application-name ${{ secrets.AWS_EB_APPLICATION }} \
+            --environment-name ${{ secrets.AWS_EB_ENVIRONMENT }} \
+            --version-label "deploy-${{ github.run_number }}"
