--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to AWS Elastic Beanstalk
+name: Deploy Chat Microservices to AWS EC2
 
 on:
   push:
@@ -15,34 +15,39 @@ jobs:
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Build and Push Docker Image
+      - name: Build and Push Docker Images
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/chat-microservices:latest .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/chat-microservices:latest
+          docker-compose build
+          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/sendmessage:latest ${{ secrets.DOCKERHUB_USERNAME }}/sendmessage:latest
+          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/getmessages:latest ${{ secrets.DOCKERHUB_USERNAME }}/getmessages:latest
+          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/deletemessage:latest ${{ secrets.DOCKERHUB_USERNAME }}/deletemessage:latest
+          
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/sendmessage:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/getmessages:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/deletemessage:latest
 
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v0.1.4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
-      - name: Deploy to Elastic Beanstalk
-        run: |
-          zip -r deploy.zip Dockerrun.aws.json
-          aws elasticbeanstalk create-application-version \
-            --application-name ${{ secrets.AWS_EB_APPLICATION }} \
-            --version-label "deploy-${{ github.run_number }}" \
-            --source-bundle S3Bucket="elasticbeanstalk-${{ secrets.AWS_REGION }}-$(aws sts get-caller-identity --query Account --output text)",S3Key="deploy.zip"
-
-          aws elasticbeanstalk update-environment \
-            --application-name ${{ secrets.AWS_EB_APPLICATION }} \
-            --environment-name ${{ secrets.AWS_EB_ENVIRONMENT }} \
-            --version-label "deploy-${{ github.run_number }}"
+          host: ${{ secrets.AWS_EC2_INSTANCE }}
+          username: ec2-user
+          key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+          script: |
+            sudo yum update -y
+            sudo yum install -y docker
+            sudo service docker start
+            sudo usermod -aG docker ec2-user
+            newgrp docker
+            curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            chmod +x /usr/local/bin/docker-compose
+            
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/sendmessage:latest
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/getmessages:latest
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/deletemessage:latest
+            
+            docker-compose down
+            docker-compose up -d
