--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   sendmessage:
     build: ./sendmessage
-    image: ${{ secrets.DOCKERHUB_USERNAME }}/sendmessage:latest
+    image: "${DOCKERHUB_USERNAME}/sendmessage:latest"
     ports:
       - "3003:3003"
     environment:
@@ -14,7 +14,7 @@ services:
 
   getmessages:
     build: ./getmessages
-    image: ${{ secrets.DOCKERHUB_USERNAME }}/getmessages:latest
+    image: "${DOCKERHUB_USERNAME}/getmessages:latest"
     ports:
       - "3004:3004"
     environment:
@@ -25,7 +25,7 @@ services:
 
   deletemessage:
     build: ./deletemessage
-    image: ${{ secrets.DOCKERHUB_USERNAME }}/deletemessage:latest
+    image: "${DOCKERHUB_USERNAME}/deletemessage:latest"
     ports:
       - "3005:3005"
     environment:
