--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,14 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Set Environment Variables
+        run: |
+          echo "DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}" >> $GITHUB_ENV
+          echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+          echo "AWS_DYNAMODB_TABLE=${{ secrets.AWS_DYNAMODB_TABLE }}" >> $GITHUB_ENV
+
       - name: Install Docker Compose
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
@@ -24,13 +32,9 @@ jobs:
       - name: Build and Push Docker Images
         run: |
           docker-compose build
-          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/sendmessage:latest ${{ secrets.DOCKERHUB_USERNAME }}/sendmessage:latest
-          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/getmessages:latest ${{ secrets.DOCKERHUB_USERNAME }}/getmessages:latest
-          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/deletemessage:latest ${{ secrets.DOCKERHUB_USERNAME }}/deletemessage:latest
-          
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/sendmessage:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/getmessages:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/deletemessage:latest
+          docker push $DOCKERHUB_USERNAME/sendmessage:latest
+          docker push $DOCKERHUB_USERNAME/getmessages:latest
+          docker push $DOCKERHUB_USERNAME/deletemessage:latest
 
   deploy:
     needs: build-and-push
@@ -51,9 +55,15 @@ jobs:
             curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             chmod +x /usr/local/bin/docker-compose
             
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/sendmessage:latest
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/getmessages:latest
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/deletemessage:latest
+            export DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
+            export AWS_REGION=${{ secrets.AWS_REGION }}
+            export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+            export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            export AWS_DYNAMODB_TABLE=${{ secrets.AWS_DYNAMODB_TABLE }}
+
+            docker pull $DOCKERHUB_USERNAME/sendmessage:latest
+            docker pull $DOCKERHUB_USERNAME/getmessages:latest
+            docker pull $DOCKERHUB_USERNAME/deletemessage:latest
             
             docker-compose down
             docker-compose up -d
