--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,13 +12,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set Environment Variables
-        run: |
-          echo "DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}" >> $GITHUB_ENV
-          echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
-          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
-          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
-          echo "AWS_DYNAMODB_TABLE=${{ secrets.AWS_DYNAMODB_TABLE }}" >> $GITHUB_ENV
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Install Docker Compose
         run: |
@@ -31,6 +30,7 @@ jobs:
 
       - name: Build and Push Docker Images
         run: |
+          export DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
           docker-compose build
           docker push $DOCKERHUB_USERNAME/sendmessage:latest
           docker push $DOCKERHUB_USERNAME/getmessages:latest
@@ -60,7 +60,7 @@ jobs:
             export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
             export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
             export AWS_DYNAMODB_TABLE=${{ secrets.AWS_DYNAMODB_TABLE }}
-
+            
             docker pull $DOCKERHUB_USERNAME/sendmessage:latest
             docker pull $DOCKERHUB_USERNAME/getmessages:latest
             docker pull $DOCKERHUB_USERNAME/deletemessage:latest
