--- a/deletemessage/Dockerfile
+++ b/deletemessage/Dockerfile
@@ -2,10 +2,11 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-COPY package.json .
+COPY package.json package-lock.json ./
 RUN npm install --only=production
 
-COPY . .
+COPY . .  
 
-EXPOSE 3005
+EXPOSE 3005 
+
 CMD ["node", "index.js"]
