--- a/getmessages/Dockerfile
+++ b/getmessages/Dockerfile
@@ -2,10 +2,11 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-COPY package.json .
+COPY package.json package-lock.json ./
 RUN npm install --only=production
 
-COPY . .
+COPY . .  
 
-EXPOSE 3004
+EXPOSE 3004  
+
 CMD ["node", "index.js"]
