--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,13 @@
+version: '3.8'
+
 services:
   sendmessage:
     build: ./sendmessage
     image: "${DOCKERHUB_USERNAME}/sendmessage:latest"
     ports:
       - "3003:3003"
+    volumes:
+      - ./sendmessage:/app  # Asegura que monta correctamente la carpeta
     environment:
       - AWS_REGION=${AWS_REGION}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
@@ -15,6 +19,8 @@ services:
     image: "${DOCKERHUB_USERNAME}/getmessages:latest"
     ports:
       - "3004:3004"
+    volumes:
+      - ./getmessages:/app
     environment:
       - AWS_REGION=${AWS_REGION}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
@@ -26,13 +32,10 @@ services:
     image: "${DOCKERHUB_USERNAME}/deletemessage:latest"
     ports:
       - "3005:3005"
+    volumes:
+      - ./deletemessage:/app
     environment:
       - AWS_REGION=${AWS_REGION}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_DYNAMODB_TABLE=${AWS_DYNAMODB_TABLE}
-
-  dynamodb_local:
-    image: amazon/dynamodb-local
-    ports:
-      - "8000:8000"
