--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,68 +2,65 @@ name: Deploy Chat Microservices to AWS EC2
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
+
+env:
+  DOCKER_REPOSITORY: ztencontacto/chat-microservices
+  APP_PORT: 5054
 
 jobs:
-  build-and-push:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Repository
+      - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose version
-
       - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build and Push Docker Images
         run: |
-          export DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
-          docker-compose build
-          docker push $DOCKERHUB_USERNAME/sendmessage:latest
-          docker push $DOCKERHUB_USERNAME/getmessages:latest
-          docker push $DOCKERHUB_USERNAME/deletemessage:latest
+          services=(sendmessage getmessages deletemessage)
+          for service in "${services[@]}"; do
+            echo "Building and pushing $service..."
+            docker build -t ${{ env.DOCKER_REPOSITORY }}-$service:latest ./$service
+            docker push ${{ env.DOCKER_REPOSITORY }}-$service:latest
+          done
 
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v0.1.4
-        with:
-          host: ${{ secrets.AWS_EC2_INSTANCE }}
-          username: ec2-user
-          key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-          script: |
-            sudo yum update -y
-            sudo yum install -y docker
-            sudo service docker start
-            sudo usermod -aG docker ec2-user
-            newgrp docker
-            curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-            chmod +x /usr/local/bin/docker-compose
-            
-            export DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
-            export AWS_REGION=${{ secrets.AWS_REGION }}
-            export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
-            export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            export AWS_DYNAMODB_TABLE=${{ secrets.AWS_DYNAMODB_TABLE }}
-            
-            docker pull $DOCKERHUB_USERNAME/sendmessage:latest
-            docker pull $DOCKERHUB_USERNAME/getmessages:latest
-            docker pull $DOCKERHUB_USERNAME/deletemessage:latest
-            
-            docker-compose down
-            docker-compose up -d
+      - name: Deploy to EC2 Instances
+        run: |
+          echo "Starting deployment to EC2 instances..."
+          IFS=',' read -ra HOSTS <<< "${{ secrets.EC2_HOSTS }}"
+          for HOST in "${HOSTS[@]}"; do
+            echo "Deploying to $HOST"
+            ssh -o StrictHostKeyChecking=no -i <(echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}") ec2-user@$HOST "
+              if ! command -v docker &> /dev/null; then
+                echo 'Installing Docker...'
+                sudo yum update -y
+                sudo yum install -y docker
+                sudo systemctl start docker
+                sudo systemctl enable docker
+              fi
+
+              echo 'Installing Docker Compose...'
+              sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-\$(uname -s)-\$(uname -m)" -o /usr/local/bin/docker-compose
+              sudo chmod +x /usr/local/bin/docker-compose
+
+              echo 'Pulling latest Docker images...'
+              services=(sendmessage getmessages deletemessage)
+              for service in "${services[@]}"; do
+                sudo docker pull ${{ env.DOCKER_REPOSITORY }}-$service:latest
+              done
+
+              echo 'Restarting containers...'
+              sudo docker-compose down || true
+              sudo docker-compose up -d
+            "
+            echo "Deployment to $HOST completed."
+          done
