--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,27 +38,34 @@ jobs:
           IFS=',' read -ra HOSTS <<< "${{ secrets.EC2_HOSTS }}"
           for HOST in "${HOSTS[@]}"; do
             echo "Deploying to $HOST"
-            ssh -o StrictHostKeyChecking=no -i <(echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}") ec2-user@$HOST "
+            ssh -o StrictHostKeyChecking=no -i <(echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}") ec2-user@$HOST << 'EOF'
+              set -x  # Activa modo debug para mostrar comandos ejecutados
+
+              echo "Verificando si Docker está instalado..."
               if ! command -v docker &> /dev/null; then
-                echo 'Installing Docker...'
+                echo 'Instalando Docker...'
                 sudo yum update -y
                 sudo yum install -y docker
                 sudo systemctl start docker
                 sudo systemctl enable docker
+                sudo usermod -aG docker ec2-user
               fi
 
-              echo 'Installing Docker Compose...'
-              sudo curl -L 'https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)' -o /usr/local/bin/docker-compose
-              sudo chmod +x /usr/local/bin/docker-compose
+              echo "Verificando si Docker Compose está instalado..."
+              if ! command -v docker-compose &> /dev/null; then
+                echo 'Instalando Docker Compose...'
+                sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+                sudo chmod +x /usr/local/bin/docker-compose
+              fi
 
-              echo 'Pulling latest Docker images...'
+              echo "Cargando imágenes Docker..."
               for service in sendmessage getmessages deletemessage; do
                 sudo docker pull ${{ env.DOCKER_REPOSITORY }}-$service:latest
               done
 
-              echo 'Restarting containers...'
+              echo "Reiniciando contenedores..."
               sudo docker-compose down || true
               sudo docker-compose up -d
-            "
+            EOF
             echo "Deployment to $HOST completed."
           done
